--- a/public/css/login.css
+++ b/public/css/login.css
@@ -11,6 +11,8 @@ html, body {
     background-repeat: no-repeat;
     background-size: cover;
     color: #fff;
+    background-attachment: fixed;
+
 }
 
 .container {
