--- a/views/briefings.ejs
+++ b/views/briefings.ejs
@@ -151,7 +151,7 @@
           <div class="card-content">
             <div class="media">
               <div class="media-content">
-                <p class="title">Captin Emergency Briefing to FO</p>
+                <p class="title">Captain Emergency Briefing to FO</p>
               </div>
             </div>
 
