--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -27,11 +27,81 @@ td {
     border-radius: 4px;
 }
 
+.columns {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.column {
+    display: flex;
+}
+
+.box {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: #b8e0d4;
+}
+
+
 .title {
     font-size: 3rem;
     text-align: center;
     color: white;
     margin-bottom: 1.5rem;
+}
+
+.control-button {
+    background-color: #809bce;
+    min-width: max-content;
+    padding: 10px 20px;
+    text-align: center;
+    white-space: nowrap;
+    border-radius: 10px;
+    font-size: 1.2rem;
+    font-weight: bold;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border: none;
+    color: #fff;
+    text-decoration: none;
+    display: inline-block;
+    margin: 4px 2px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.control-title {
+    text-align: center;
+    font-size: 1.4rem;
+    margin-bottom: 10px;
+    font-weight: 700;
+
+}
+
+.action-btn-group {
+    display: flex;
+    justify-content: space-around;
+}
+
+.edit-btn, .unflag-btn {
+    background-color: #009EE2;
+    color: #fff;
+    border: none;
+    padding: 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 4px;
+    transition: background-color 0.3s ease;
+}
+
+.edit-btn:hover, .unflag-btn:hover {
+    background-color: #007cb2;
 }
 
 .table {
@@ -47,16 +117,6 @@ thead tr {
     font-size: 1.3rem;
     font-weight: 700;
     background-color: #bdcbd3;
-}
-
-.edit-btn {
-    /* width: 100%; */
-    background-color: #009EE2;
-    font-size: 1rem;
-    padding: 5px;
-    color: #000;
-    margin-top: 10px;
-
 }
 
 .total-questions {
@@ -90,5 +150,11 @@ thead tr {
     .table.is-mobile-custom td {
         word-break: break-word;
         white-space: normal;
+    }
+
+    .control-button {
+        padding: 5px 10px;
+        font-size: 1rem;
+        border-radius: 5px;
     }
 }
