--- a/public/css/quiz.css
+++ b/public/css/quiz.css
@@ -12,6 +12,8 @@ html, body {
     min-height: 100vh;
     display: flex;
     justify-content: space-between;
+    background-attachment: fixed;
+
 }
 
 .container {
