--- a/public/css/flows.css
+++ b/public/css/flows.css
@@ -1,3 +1,13 @@
+:root {
+    --text-color: #000;
+    --background-color: #fff;
+}
+
+.dark-mode {
+    --text-color: #fff;
+    --background-color: #000;
+}
+
 html, body {
     margin: 0;
     height: 100%;
@@ -10,17 +20,84 @@ html, body {
     background-position: 30% center;
     background-repeat: no-repeat;
     background-size: cover;
-    color: #fff;
+    color: var(--text-color);
     background-attachment: fixed;
-
 }
 
+.dark-mode-toggle {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: auto;
+    margin-left: 20px;
+}
+
+#darkModeLabel {
+    color: #fff;
+    font-size: 1rem;
+    margin-right: 10px;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 40px;
+    height: 20px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.switch label {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: #ccc;
+    cursor: pointer;
+    border-radius: 20px;
+    transition: background-color 0.2s;
+}
+
+.switch label:before {
+    position: absolute;
+    content: "";
+    height: 16px;
+    width: 16px;
+    left: 2px;
+    bottom: 2px;
+    background-color: white;
+    transition: 0.2s;
+    border-radius: 50%;
+}
+
+.switch input:checked+label {
+    background-color: #2196F3;
+}
+
+.switch input:focus+label {
+    box-shadow: 0 0 1px #2196F3;
+}
+
+.switch input:checked+label:before {
+    transform: translateX(20px);
+}
 
 
 .box {
     border: 1px solid black;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    background-color: var(--background-color);
+    color: var(--text-color);
+    margin-top: 10px;
+}
 
+.title {
+    color: var(--text-color);
 }
 
 .list-item {
