--- a/views/flows.ejs
+++ b/views/flows.ejs
@@ -5,6 +5,14 @@
 
 <section class="section">
   <div class="container">
+    <div class="dark-mode-toggle">
+      <label for="darkModeSwitch" id="darkModeLabel">Dark Mode:</label>
+      <div class="switch">
+        <input type="checkbox" id="darkModeSwitch" class="checkbox" />
+        <label for="darkModeSwitch" class="label"></label>
+      </div>
+    </div>
+
     <div
       class="columns is-multiline is-variable is-1-mobile is-0-tablet is-3-desktop"
     >
@@ -751,3 +759,4 @@
     </div>
   </div>
 </section>
+<script src="js/flows.js"></script>
