--- a/views/questions/createQuestions.ejs
+++ b/views/questions/createQuestions.ejs
@@ -1,7 +1,6 @@
 <div class="notification-container"></div>
-
 <div class="container">
-  <div class="box">
+  <div class="box is-flex is-flex-direction-column is-align-items-center">
     <h1 class="title is-2">Add Questions</h1>
     <form
       id="create-question-form"
@@ -36,7 +35,9 @@
               name="category"
               multiple
             >
-              <% categories.forEach(function(category, index) { %>
+              <% categories.sort((a, b) =>
+              a.name.localeCompare(b.name)).forEach(function(category, index) {
+              %>
               <option value="<%= category.value %>">
                 <%= category.name %>
               </option>
