--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,7 +23,8 @@
             <div class="navbar-dropdown">
               <h3 class="navbar-item">Misc Items</h3>
                 <ul>
-                <li><a class="navbar-item" href="/weather">Weather Planning</a></h3></li>
+                  <li><a href="/discussions" class="navbar-item">Discussion Board</a></li>
+                <li><a class="navbar-item" href="/weather">Weather Planning</a></li>
                 
                 <li><a class="navbar-item" href="/fuel">Fuel Planning</a></li>
                 </ul>
