style changes to discussion board

--- a/views/discussions/discussion.ejs
+++ b/views/discussions/discussion.ejs
@@ -1,24 +1,28 @@
-<div class="container">
-  <h1 class="title"><%= discussion.title %></h1>
-  <p>
-    Created by <%= discussion.user.username %> on <%=
-    discussion.createdAt.toLocaleString() %>
-  </p>
-  <div class="content"><%= discussion.content %></div>
+<div class="container mt-4">
+  <div class="card">
+    <div class="card-content">
+      <h1 class="title"><%= discussion.title %></h1>
+      <p class="subtitle is-6">
+        Created by <%= discussion.user.username %> on <%=
+        discussion.createdAt.toLocaleString() %>
+      </p>
+      <div class="content"><%= discussion.content %></div>
+      <% if (user && user._id.toString() === discussion.user._id.toString()) {
+      %>
+      <form action="/discussions/<%= discussion._id %>" method="POST">
+        <input type="hidden" name="_method" value="DELETE" />
+        <button type="submit" class="button is-danger">Delete Thread</button>
+      </form>
+      <% } %>
+    </div>
+  </div>
 
-  <% if (user && user._id.toString() === discussion.user._id.toString()) { %>
-  <form action="/discussions/<%= discussion._id %>" method="POST">
-    <input type="hidden" name="_method" value="DELETE" />
-    <button type="submit" class="button is-danger">Delete Thread</button>
-  </form>
-  <% } %>
-
-  <div class="comments">
-    <h2 class="section-title">Comments</h2>
+  <div class="comments mt-4">
+    <h2 class="subtitle">Comments</h2>
     <% discussion.comments.forEach(function(comment) { %>
-    <div class="comment box">
+    <div class="box">
       <p><%= comment.content %></p>
-      <p>
+      <p class="is-size-7 has-text-grey">
         Posted by <%= comment.user.username %> on <%=
         comment.createdAt.toLocaleString() %>
       </p>
@@ -27,8 +31,8 @@
   </div>
 
   <% if (user) { %>
-  <div class="add-comment-form">
-    <h2 class="section-title">Add Comment</h2>
+  <div class="add-comment-form box mt-4">
+    <h2 class="subtitle">Add Comment</h2>
     <form action="/discussions/<%= discussion._id %>/comments" method="POST">
       <div class="field">
         <label for="content" class="label">Comment</label>
@@ -41,7 +45,9 @@
           ></textarea>
         </div>
       </div>
-      <button type="submit" class="button is-link">Post Comment</button>
+      <div class="control">
+        <button type="submit" class="button is-link">Post Comment</button>
+      </div>
     </form>
   </div>
   <% } %>
