--- a/views/discussions/discussions.ejs
+++ b/views/discussions/discussions.ejs
@@ -1,10 +1,10 @@
-<div class="container">
-  <h1 class="title">Discussion Board</h1>
+<div class="container mt-4">
+  <h1 class="title has-text-centered">Discussion Board</h1>
 
   <div class="columns">
     <div class="column">
-      <div class="create-thread-form">
-        <h2 class="section-title">Create New Thread</h2>
+      <div class="box">
+        <h2 class="subtitle">Create New Thread</h2>
         <form action="/discussions" method="POST">
           <div class="field">
             <label for="title" class="label">Thread Title</label>
@@ -29,46 +29,51 @@
               ></textarea>
             </div>
           </div>
-          <button type="submit" class="button is-link">Create Thread</button>
+          <div class="control">
+            <button type="submit" class="button is-link">Create Thread</button>
+          </div>
         </form>
       </div>
     </div>
 
     <div class="column">
-      <div class="discussion-list">
-        <h2 class="section-title">Recent Discussions</h2>
+      <div class="box">
+        <h2 class="subtitle">Recent Discussions</h2>
         <% discussions.forEach(function(discussion) { %>
-        <div class="discussion box">
-          <h3 class="discussion-title title is-4">
-            <%= discussion.title %><span
-              class="discussion-creator has-text-weight-semibold"
+        <div class="card mb-4">
+          <div class="card-content">
+            <h3 class="title is-4">
+              <%= discussion.title %>
+              <span class="tag is-info is-light ml-2"
+                ><%= discussion.comments.length %> comment(s)</span
+              >
+              <p class="is-size-7 has-text-grey">
+                Created by <%= discussion.user.username %> on <%=
+                discussion.createdAt.toLocaleString() %>
+              </p>
+            </h3>
+            <p class="discussion-content"><%= discussion.content %></p>
+          </div>
+          <footer class="card-footer">
+            <a
+              href="/discussions/<%= discussion._id %>"
+              class="card-footer-item"
+              >View Discussion</a
             >
-              Created by <%= discussion.user.username %> on <%=
-              discussion.createdAt.toLocaleString() %>
-            </span>
-            <span class="comment-count"
-              ><%= discussion.comments.length %> comment(s)</span
+            <% if (user && user._id.toString() ===
+            discussion.user._id.toString()) { %>
+            <form
+              action="/discussions/<%= discussion._id %>"
+              method="POST"
+              class="card-footer-item has-text-danger"
             >
-          </h3>
-          <p class="discussion-content"><%= discussion.content %></p>
-
-          <!-- Add this line to display the comment count -->
-
-          <a
-            href="/discussions/<%= discussion._id %>"
-            class="view-discussion-link button is-info"
-            >View Discussion</a
-          >
-
-          <% if (user && user._id.toString() === discussion.user._id.toString())
-          { %>
-          <form action="/discussions/<%= discussion._id %>" method="POST">
-            <input type="hidden" name="_method" value="DELETE" />
-            <button type="submit" class="button is-danger">
-              Delete Thread
-            </button>
-          </form>
-          <% } %>
+              <input type="hidden" name="_method" value="DELETE" />
+              <button type="submit" class="button is-text">
+                Delete Thread
+              </button>
+            </form>
+            <% } %>
+          </footer>
         </div>
         <% }); %>
       </div>
