--- a/views/discussions/discussions.ejs
+++ b/views/discussions/discussions.ejs
@@ -3,8 +3,8 @@
 
   <div class="columns">
     <div class="column">
-      <div class="box">
-        <h2 class="subtitle">Create New Thread</h2>
+      <div class="box has-background-light">
+        <h2 class="subtitle has-text-link">Create New Thread</h2>
         <form action="/discussions" method="POST">
           <div class="field">
             <label for="title" class="label">Thread Title</label>
@@ -33,12 +33,33 @@
             <button type="submit" class="button is-link">Create Thread</button>
           </div>
         </form>
+        <hr class="divider" />
+        <h2 class="subtitle has-text-link has-text-weight-bold mt-4">
+          Recent Threads
+        </h2>
+        <% recentDiscussions.forEach(function(discussion) { %>
+        <div class="box has-background-white-ter">
+          <h4 class="title is-5 has-text-link-dark" style="margin-bottom: 5px">
+            <%= discussion.title %>
+          </h4>
+          <p class="is-size-7 has-text-grey">
+            Created by
+            <span class="has-text-weight-semibold"
+              ><%= discussion.user.username %></span
+            >
+            on
+            <span class="has-text-weight-semibold"
+              ><%= discussion.createdAt.toLocaleString() %></span
+            >
+          </p>
+        </div>
+        <% }); %>
       </div>
     </div>
 
     <div class="column">
-      <div class="box">
-        <h2 class="subtitle">Recent Discussions</h2>
+      <div class="box has-background-light">
+        <h2 class="subtitle has-text-link">Recent Discussions</h2>
         <% discussions.forEach(function(discussion) { %>
         <div class="card mb-4">
           <div class="card-content">
@@ -52,6 +73,7 @@
                 discussion.createdAt.toLocaleString() %>
               </p>
             </h3>
+            <hr />
             <p class="discussion-content"><%= discussion.content %></p>
           </div>
           <footer class="card-footer">
