--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,7 +17,9 @@
           <a class="navbar-item" href="/">
             Home
           </a>
-    
+          <a class="navbar-item" href="/quiz">
+            Flashcards
+          </a>
           <div class="navbar-item has-dropdown is-hoverable">
             <a class="navbar-link">Options</a>
             <div class="navbar-dropdown">
@@ -58,7 +60,7 @@
             </div>
 
           </div>
-          <a href="/quiz" class="navbar-item"><button class="button is-rounded" id="flashcard-btn">Flashcards</button></a>
+          
           
         </div>
     
