--- a/public/css/flows.css
+++ b/public/css/flows.css
@@ -16,12 +16,14 @@ html, body {
     font-family: 'Merriweather', serif;
     display: flex;
     flex-direction: column;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://images.unsplash.com/photo-1570710891163-6d3b5c47248b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
+    background-color: rgb(151, 185, 255);
+
+    /* background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://images.unsplash.com/photo-1570710891163-6d3b5c47248b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
     background-position: 30% center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover; */
     color: var(--text-color);
-    background-attachment: fixed;
+    /* background-attachment: fixed; */
 }
 
 .dark-mode-toggle {
@@ -89,7 +91,7 @@ html, body {
 
 
 .box {
-    border: 1px solid black;
+    border: 1px solid rgb(109, 109, 109);
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     background-color: var(--background-color);
     color: var(--text-color);
