--- a/views/register.ejs
+++ b/views/register.ejs
@@ -100,6 +100,20 @@
                   </button>
                 </div>
               </div>
+              <p class="mb-0 legal">
+                <strong class="bold">Legal Disclaimer:</strong>The information
+                on Upgrademe.pro is for general purposes only and provided in
+                good faith, but we make no guarantee regarding its accuracy,
+                reliability, or completeness. It should not be considered
+                professional advice or recommendations from official sources.
+                Users are responsible for verifying the information's accuracy
+                before relying on it. We are not liable for any loss or damage
+                resulting from the use of the site or its information. Your use
+                of the site is at your own risk, and you agree to these terms
+                and conditions. The information provided on the site is for
+                personal use only and should not be considered from an official
+                source.
+              </p>
             </form>
           </div>
         </div>
