--- a/public/css/quiz.css
+++ b/public/css/quiz.css
@@ -6,9 +6,10 @@ html, body {
     font-family: 'Merriweather', serif;
     display: flex;
     flex-direction: column;
-    background-color: rgb(151, 185, 255);
+    background-color: rgb(51, 51, 51);
+
     color: #fff;
-    background-attachment: fixed;
+
 
 }
 
@@ -54,7 +55,7 @@ html, body {
 }
 
 #category {
-    margin-top: 7px;
+    margin-top: 15px;
     font-size: 0.6rem;
     color: #fff;
 }
@@ -63,8 +64,8 @@ html, body {
     margin-left: 10px;
     margin-top: 5px;
     margin-bottom: 5px;
-    font-size: 0.5rem;
-    color: rgba(37, 104, 251, 1);
+    font-size: 0.7rem;
+    color: rgb(255, 255, 255);
 }
 
 .button-container {
@@ -219,8 +220,8 @@ html, body {
 }
 
 #prev-question, #next-question {
-    background-color: #5dbea3;
-    color: #ffffff;
+    background-color: #708090;
+    color: #000;
     font-weight: 700;
     font-size: 1.2rem;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -229,8 +230,8 @@ html, body {
 }
 
 #show-answer {
-    background-color: #4681f4;
-    color: #ffffff;
+    background-color: #4f6f8f;
+    color: #000;
     border: none;
     font-weight: 700;
     font-size: 1.2rem;
@@ -251,9 +252,11 @@ html, body {
 }
 
 #submit-rating {
-    background-color: rgba(37, 104, 251, 0.7);
-    color: #ffffff;
-    border: 2px solid #2568fb;
+    background-color: #888888;
+
+
+    color: #000;
+    /* border: 2px solid #2568fb; */
     font-weight: 700;
     font-size: 0.8rem;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -274,9 +277,9 @@ html, body {
 }
 
 #flag-for-review {
-    background-color: rgba(255, 56, 96, 0.7);
-    color: #fff;
-    border: 2px solid #ff3860;
+    background-color: #888888;
+    color: #000;
+    /* border: 1px solid #ff3860; */
     font-weight: 700;
     font-size: 0.8rem;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -292,7 +295,7 @@ html, body {
 }
 
 #flag-for-review:hover {
-    background-color: rgba(255, 56, 96, 0.9);
+    background-color: rgba(255, 160, 179, 0.9);
     transform: scale(1.05);
 }
 
