--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,12 +1,11 @@
 .navbar {
-    background-color: transparent;
+    background-color: rgba(145, 145, 145, 0.7);
+
+    top: 0;
+    left: 0;
     width: 100%;
     z-index: 1000;
     color: #fff;
-}
-
-.navbar-menu {
-    background-color: #000;
 }
 
 .navbar-item,
@@ -56,10 +55,8 @@
     border-radius: 10px;
     font-size: 1.2rem;
     font-weight: bold;
-    /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
     color: #fff;
     border: 1px solid #d1d1d1;
-
 }
 
 #login-btn {
@@ -68,7 +65,6 @@
     border-radius: 10px;
     font-size: 1.2rem;
     font-weight: bold;
-    /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
     border: 1px solid #d1d1d1;
 }
 
@@ -76,12 +72,10 @@
     color: #009EE2;
     background-color: transparent;
     transition: 0.2s ease-in-out;
-
 }
 
 #login-btn:hover {
     color: #fff;
     background-color: #009EE2;
     transition: 0.2s ease-in-out;
-
 }
