--- a/public/css/createQuestions.css
+++ b/public/css/createQuestions.css
@@ -1,17 +1,13 @@
 html, body {
     margin: 0;
-    height: 100%;
     padding: 0;
+    height: 100%;
     box-sizing: border-box;
-    font-family: 'Merriweather', serif;
     display: flex;
     flex-direction: column;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://images.unsplash.com/photo-1570710891163-6d3b5c47248b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
-    background-position: 30% center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    font-family: 'Merriweather', serif;
+    background-color: rgb(51, 51, 51);
     color: #fff;
-    background-attachment: fixed;
 }
 
 #select2-category-results li {
@@ -19,33 +15,24 @@ html, body {
 }
 
 .container {
+    flex-grow: 1;
     margin-top: 100px;
     min-width: 100%;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    flex-grow: 1;
-}
-
-.control {
-    width: 100%;
+    padding: 0 1rem;
 }
 
 .box {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
     background-color: #f5f5f5;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    margin: 0 auto;
+    margin-top: 100px;
+    max-width: 400px;
+    padding: 20px;
 }
 
-.input,
-.select select {
+.input, .select select, .custom-select select {
     font-size: 20px;
-
-}
-
-.custom-select select {
     width: 100%;
     box-sizing: border-box;
 }
@@ -54,56 +41,40 @@ html, body {
     margin-bottom: 20px;
 }
 
-.label {
-    font-weight: bold;
-}
-
 h1 {
     font-size: 4rem;
 }
 
+.label {
+    font-weight: bold;
+}
+
 #create-question-btn {
-    width: 100%;
+    background-color: #009EE2;
+    border-radius: 7px;
+    color: #000;
     font-size: 1.2rem;
     font-weight: bold;
-    border-radius: 7px;
-    background-color: #009EE2;
+    width: 100%;
 }
 
 #create-question-btn:hover {
     background-color: #007cb1;
-    color: #000;
-}
-
-.select select {
-    color: #000;
 }
 
 @media screen and (max-width: 768px) {
-    .box {
-        padding-left: 1rem;
-        padding-right: 1rem;
+    .box, .select.is-multiple.mobile-fullwidth {
         width: 100%;
     }
 
-    .select.is-multiple.mobile-fullwidth {
-        width: 100%;
-    }
-
-    .control {
-        width: 100%;
-    }
+    /* .box {
+        padding: 1rem;
+    } */
 }
 
 @media screen and (min-width: 1024px) {
     .container {
+        margin: auto;
         max-width: 1200px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    .custom-select select {
-        width: 100%;
-        box-sizing: border-box;
     }
 }
