--- a/public/css/new-note.css
+++ b/public/css/new-note.css
@@ -6,13 +6,21 @@ html, body {
     font-family: 'Merriweather', serif;
     display: flex;
     flex-direction: column;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://images.unsplash.com/photo-1570710891163-6d3b5c47248b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
-    background-position: 30% center;
-    background-repeat: no-repeat;
-    background-size: cover;
     color: #fff;
-    background-attachment: fixed;
+    background-color: rgb(51, 51, 51);
 
+}
+
+.form-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: calc(100vh - 60px);
+    /* subtract the height of the navbar if it's fixed */
+}
+
+.columns {
+    max-width: 100%;
 }
 
 .column {
