--- a/public/css/viewQuestions.css
+++ b/public/css/viewQuestions.css
@@ -7,12 +7,8 @@ html, body {
     display: flex;
     flex-direction: column;
     color: #fff;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-        url('https://images.unsplash.com/photo-1570710891163-6d3b5c47248b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
-    background-position: 30% center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
+    background-color: rgb(51, 51, 51);
+
 }
 
 td {
@@ -35,7 +31,7 @@ td {
 }
 
 .table {
-    background-color: rgba(208, 238, 238, 0.3);
+    background-color: rgba(230, 230, 230, 0.3);
 }
 
 .table.is-mobile-custom {
