--- a/views/newNote.ejs
+++ b/views/newNote.ejs
@@ -1,33 +1,34 @@
-<div class="columns is-centered">
-  <div class="column">
-    <h1 class="title">Create Note</h1>
-    <form action="/notes/create" method="POST">
-      <div class="field">
-        <label class="label" for="title">Title:</label>
-        <div class="control">
-          <input class="input" type="text" id="title" name="title" required />
+<div class="form-wrapper">
+  <div class="columns is-centered">
+    <div class="column">
+      <h1 class="title">Create Note</h1>
+      <form action="/notes/create" method="POST">
+        <div class="field">
+          <label class="label" for="title">Title:</label>
+          <div class="control">
+            <input class="input" type="text" id="title" name="title" required />
+          </div>
         </div>
-      </div>
 
-      <div class="field">
-        <label class="label" for="content">Content:</label>
-        <div class="control">
-          <div id="quill-editor"></div>
-          <input type="hidden" id="content" name="content" required />
+        <div class="field">
+          <label class="label" for="content">Content:</label>
+          <div class="control">
+            <div id="quill-editor"></div>
+            <input type="hidden" id="content" name="content" required />
+          </div>
         </div>
-      </div>
 
-      <div class="field">
-        <div class="control">
-          <button id="save-note-btn" class="button" type="submit">
-            Save Note
-          </button>
+        <div class="field">
+          <div class="control">
+            <button id="save-note-btn" class="button" type="submit">
+              Save Note
+            </button>
+          </div>
         </div>
-      </div>
-    </form>
+      </form>
+    </div>
   </div>
 </div>
-
 <script>
   const quill = new Quill("#quill-editor", {
     theme: "snow",
